fix(pricing): pricing images not showing up

--- a/src/pages/pricing/pricing.module.scss
+++ b/src/pages/pricing/pricing.module.scss
@@ -122,6 +122,7 @@
   display: block;
   margin: 15px auto;
   height: 75px;
+  width: 75px;
 }
 
 .pricing-slider {
